New Options optimized + new Selection MEthod